# tau-bench-annotate

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
annotate_agent/: gradio_demo.py  logfire_tools.py  planner.py
annotator/: _logfire_mcp.py  agent.py  agents.py  constants.py  demo.py  logfire_tools.py  models.py  tools.py
annotator/logfire_agent/: _logfire_mcp.py  agent.py  tools.py
tau_bench/: .env.example  pyproject.toml  run.sh
tau_bench/tau_bench/: run.py
tau_bench/tau_bench/agents/: tool_calling_agent.py
tau_bench/tau_bench/model_utils/model/: claude.py
