[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tau-bench-annotate"
version = "0.1.0"
description = "hackathon project"
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.54.0",
    "gradio>=5.34.0",
    "ipykernel>=6.29.5",
    "litellm>=1.72.6",
    "logfire>=3.19.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "smolagents>=1.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tau_bench"]

[tool.hatch.metadata]
allow-direct-references = true 

[tool.uv]
required-version = ">=0.7.2"

[tool.ruff]
exclude = [".venv"]
line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
select = [
    "B",   # Bugbear
    "E",   # Pycodestyle
    "F",   # Pyflakes
    "I",   # Isort
    "RUF", # Ruff
    "W",   # Pycodestyle
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 18

